[package]
name = "blog"
version = "1.0.0"
authors = ["kkhmsg30@naver.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []

[dependencies]
near-sdk = { version = "4.1.1", features = ["unstable"] }
